tests/spec/emit/snapshots/nested_block_continue_in_if_branch.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() {
    loop {
      let _ = if true { { continue } } else { { 1 } }
      break
    }
  }
---
package main

func test() {
	for {
		var tmp int
		if true {
			{
				continue
			}
		} else {
			var tmp_1 int
			tmp_1 = 1
			tmp = tmp_1
		}
		_ = tmp
		break
	}
}
