tests/spec/emit/snapshots/nested_block_return_as_match_subject.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let _ = match { { return 1 } } {
      1 => 1,
      _ => 2,
    }
    3
  }
---
package main

func test() int {
	var tmp int
	{
		{
			return 1
		}
	}
	_ = tmp
	return 3
}
