tests/spec/emit/snapshots/nested_block_return_in_struct_spread.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nstruct S { a: int }\nfn test() -> int {\n  let _ = S { a: 1, ..{ { return 1 } } }.a\n  2\n}\n"
---
package main

type S struct {
	a int
}

func test() int {
	{
		{
			return 1
		}
	}
	_ = S{}.a
	return 2
}
