tests/spec/emit/snapshots/nested_function_calls.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn double(x: int) -> int {
    x * 2
  }
  
  fn test() -> int {
    double(double(5))
  }
---
package main

func double(x int) int {
	return x * 2
}

func test() int {
	return double(double(5))
}
