tests/spec/emit/snapshots/nested_loops.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(matrix: Slice<Slice<int>>) -> int {
    let mut count = 0;
    for row in matrix {
      for item in row {
        count = count + 1;
      };
    };
    count
  }
---
package main

func test(matrix [][]int) int {
	count := 0
	for _, row := range matrix {
		for range row {
			count++
		}
	}
	return count
}
