tests/spec/emit/snapshots/nested_option_construction.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Option<Option<int>> {
    Some(None)
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() (lisette.Option[int], bool) {
	return lisette.MakeOptionNone[int](), true
}
