tests/spec/emit/snapshots/nested_option_pair_match_keeps_guarded_arm_on_tree.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn pick(n: int) -> Option<int> { if n < 0 { None } else { Some(n) } }
  
  fn test() -> string {
    match pick(3) {
      Some(v) if v > 2 => "big",
      Some(_) => "small",
      None => "none",
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func pick(n int) (int, bool) {
	if n < 0 {
		return 0, false
	}
	return n, true
}

func test() string {
	option := lisette.OptionFromCommaOk[int](pick(3))
	if option.Tag == lisette.OptionSome {
		if option.SomeVal > 2 {
			return "big"
		}
		return "small"
	}
	return "none"
}
